--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@ body {text-align:center;margin:0}
 <div id="text6" style="position:absolute; overflow:hidden; left:729px; top:409px; width:490px; height:274px; z-index:15"><div class="wpmd">
 <div><font class="ws22" color="#2493BD" face="Gill Sans MT"><B>Bienvenido la grieta, invocador.</B></font></div>
 <div align=right><font face="Gill Sans MT"><BR></font></div>
-<div align=justify><font class="ws14" face="Gill Sans MT">League of Legends es un juego de estrategia por equipos en el que dos equipos de cinco campeones se enfrentan para ver quién destruye antes la base del otro. Elige de entre un elenco de 140 campeones para realizar jugadas épicas, asesinar rivales y derribar torretas para alzarte con la victoria.</font></div>
+<div align=justify><font class="ws14" face="Gill Sans MT">League of Legends es un juego de estrategia por equipos en el que dos equipos de cinco campeones se enfrentan para ver qui&eacute;n destruye antes la base del otro. Elige de entre un elenco de 140 campeones para realizar jugadas &eacute;picas, asesinar rivales y derribar torretas para alzarte con la victoria.</font></div>
 </div></div>
 
 <div id="image9" style="position:absolute; overflow:hidden; left:169px; top:379px; width:543px; height:305px; z-index:16"><img src="images/paste4.jpg" alt="" border=0 width=543 height=305></div>
