--- a/champs.html
+++ b/champs.html
@@ -60,8 +60,8 @@ a.Otros:hover{color:#3366FF;}
 <div id="shape4" style="position:absolute; overflow:hidden; left:20px; top:462px; width:487px; height:214px; z-index:4"><img border=0 alt="shape" src="images/shape62042188.gif"></div>
 
 <div id="text4" style="position:absolute; overflow:hidden; left:41px; top:474px; width:445px; height:181px; z-index:5"><div class="wpmd">
-<div><font class="ws16" face="Gill Sans MT">Los campeones de la calle central cuentan con un gran daño explosivo y funcionan muy bien tanto de forma independiente como en equipo. </font></div>
-<div><font class="ws16" face="Gill Sans MT">Para ellos, el combate es una peligrosa danza que consiste en encontrar el momento idóneo para acabar con su rival.</font></div>
+<div><font class="ws16" face="Gill Sans MT">Los campeones de la calle central cuentan con un gran da&Ã±acute;o explosivo y funcionan muy bien tanto de forma independiente como en equipo. </font></div>
+<div><font class="ws16" face="Gill Sans MT">Para ellos, el combate es una peligrosa danza que consiste en encontrar el momento id&oacute;neo para acabar con su rival.</font></div>
 </div></div>
 
 <div id="shape5" style="position:absolute; overflow:hidden; left:20px; top:700px; width:486px; height:316px; z-index:6"><img border=0 alt="shape" src="images/shape62059843.gif"></div>
@@ -69,7 +69,7 @@ a.Otros:hover{color:#3366FF;}
 <div id="shape6" style="position:absolute; overflow:hidden; left:19px; top:802px; width:487px; height:214px; z-index:7"><img border=0 alt="shape" src="images/shape62059844.gif"></div>
 
 <div id="text6" style="position:absolute; overflow:hidden; left:40px; top:814px; width:445px; height:181px; z-index:8"><div class="wpmd">
-<div><font class="ws16" face="Gill Sans MT">Los campeones de apoyo son los protectores del equipo. Mantienen con vida a sus aliados y se centran en que consigan asesinatos, así como en proteger a su compañero de la calle inferior hasta que se vuelva más fuerte.</font></div>
+<div><font class="ws16" face="Gill Sans MT">Los campeones de apoyo son los protectores del equipo. Mantienen con vida a sus aliados y se centran en que consigan asesinatos, as&iacute; como en proteger a su compa&Ã±acute;ero de la calle inferior hasta que se vuelva m&aacute;s fuerte.</font></div>
 </div></div>
 
 <div id="shape7" style="position:absolute; overflow:hidden; left:22px; top:1049px; width:486px; height:316px; z-index:9"><img border=0 alt="shape" src="images/shape62072437.gif"></div>
@@ -81,7 +81,7 @@ a.Otros:hover{color:#3366FF;}
 </div></div>
 
 <div id="text8" style="position:absolute; overflow:hidden; left:42px; top:1163px; width:445px; height:181px; z-index:12"><div class="wpmd">
-<div><font class="ws16" face="Gill Sans MT">Los junglas dedican su partida a la caza. Se sirven de su destreza y sigilo para saltar de una calle a otra, se encargan de vigilar los monstruos neutrales más importantes y atacan en el momento preciso cuando un enemigo baja la guardia.</font></div>
+<div><font class="ws16" face="Gill Sans MT">Los junglas dedican su partida a la caza. Se sirven de su destreza y sigilo para saltar de una calle a otra, se encargan de vigilar los monstruos neutrales m&aacute;s importantes y atacan en el momento preciso cuando un enemigo baja la guardia.</font></div>
 </div></div>
 
 <div id="shape9" style="position:absolute; overflow:hidden; left:20px; top:1399px; width:486px; height:316px; z-index:13"><img border=0 alt="shape" src="images/shape62108015.gif"></div>
