--- a/champs.html
+++ b/champs.html
@@ -60,7 +60,7 @@ a.Otros:hover{color:#3366FF;}
 <div id="shape4" style="position:absolute; overflow:hidden; left:20px; top:462px; width:487px; height:214px; z-index:4"><img border=0 alt="shape" src="images/shape62042188.gif"></div>
 
 <div id="text4" style="position:absolute; overflow:hidden; left:41px; top:474px; width:445px; height:181px; z-index:5"><div class="wpmd">
-<div><font class="ws16" face="Gill Sans MT">Los campeones de la calle central cuentan con un gran da&ñacute;o explosivo y funcionan muy bien tanto de forma independiente como en equipo. </font></div>
+<div><font class="ws16" face="Gill Sans MT">Los campeones de la calle central cuentan con un gran daño explosivo y funcionan muy bien tanto de forma independiente como en equipo. </font></div>
 <div><font class="ws16" face="Gill Sans MT">Para ellos, el combate es una peligrosa danza que consiste en encontrar el momento id&oacute;neo para acabar con su rival.</font></div>
 </div></div>
 
@@ -69,7 +69,7 @@ a.Otros:hover{color:#3366FF;}
 <div id="shape6" style="position:absolute; overflow:hidden; left:19px; top:802px; width:487px; height:214px; z-index:7"><img border=0 alt="shape" src="images/shape62059844.gif"></div>
 
 <div id="text6" style="position:absolute; overflow:hidden; left:40px; top:814px; width:445px; height:181px; z-index:8"><div class="wpmd">
-<div><font class="ws16" face="Gill Sans MT">Los campeones de apoyo son los protectores del equipo. Mantienen con vida a sus aliados y se centran en que consigan asesinatos, as&iacute; como en proteger a su compa&ñacute;ero de la calle inferior hasta que se vuelva m&aacute;s fuerte.</font></div>
+<div><font class="ws16" face="Gill Sans MT">Los campeones de apoyo son los protectores del equipo. Mantienen con vida a sus aliados y se centran en que consigan asesinatos, as&iacute; como en proteger a su compañero de la calle inferior hasta que se vuelva m&aacute;s fuerte.</font></div>
 </div></div>
 
 <div id="shape7" style="position:absolute; overflow:hidden; left:22px; top:1049px; width:486px; height:316px; z-index:9"><img border=0 alt="shape" src="images/shape62072437.gif"></div>
