--- a/splasharts.html
+++ b/splasharts.html
@@ -123,63 +123,63 @@ a.Otros:hover{color:#3366FF;}
 <div><font class="ws18" color="#FFFFFF" face="Gill Sans MT"><B>AHRI</B></font></div>
 <div><font class="ws12" color="#FFFFFF" face="Gill Sans MT"><B><I>La Mujer Zorro de nueve Colas</I></B></font></div>
 <div><font class="ws12" color="#FFFFFF" face="Gill Sans MT"><BR></font></div>
-<div><font class="ws11" color="#FFFFFF" face="Gill Sans MT">Ahri es una vastaya conectada de forma innata al poder latente de Runaterra, y es capaz de convertir la magia en orbes de energía pura. Le gusta jugar con su presa, manipulando sus emociones antes de devorar su esencia de vida. sus emociones antes de devorar su esencia de vida</font></div>
+<div><font class="ws11" color="#FFFFFF" face="Gill Sans MT">Ahri es una vastaya conectada de forma innata al poder latente de Runaterra, y es capaz de convertir la magia en orbes de energ&iacute;a pura. Le gusta jugar con su presa, manipulando sus emociones antes de devorar su esencia de vida. sus emociones antes de devorar su esencia de vida.</font></div>
 </div></div>
 
 <div id="text2" style="position:absolute; overflow:hidden; left:83px; top:637px; width:299px; height:186px; z-index:28"><div class="wpmd">
 <div><font class="ws18" color="#FFFFFF" face="Gill Sans MT"><B>AMUMU</B></font></div>
 <div><font class="ws12" color="#FFFFFF" face="Gill Sans MT"><B><I>La Momia Triste</I></B></font></div>
 <div><font class="ws12" color="#FFFFFF" face="Gill Sans MT"><BR></font></div>
-<div><font class="ws11" color="#FFFFFF" face="Gill Sans MT">Cuenta la leyenda que Amumu es un alma solitaria y melancólica de la vieja Shurima que vaga por el mundo en busca de un amigo. Condenado por una maldición ancestral, su destino es permanecer solo para siempre. </font></div>
+<div><font class="ws11" color="#FFFFFF" face="Gill Sans MT">Cuenta la leyenda que Amumu es un alma solitaria y melanc&oacute;lica de la vieja Shurima que vaga por el mundo en busca de un amigo. Condenado por una maldici&oacute;n ancestral, su destino es permanecer solo para siempre. </font></div>
 </div></div>
 
 <div id="text3" style="position:absolute; overflow:hidden; left:86px; top:1057px; width:299px; height:186px; z-index:29"><div class="wpmd">
 <div><font class="ws18" color="#FFFFFF" face="Gill Sans MT"><B>AURELION SOL</B></font></div>
 <div><font class="ws12" color="#FFFFFF" face="Gill Sans MT"><B><I>El Forjador de Estrellas</I></B></font></div>
 <div><font class="ws12" color="#FFFFFF" face="Gill Sans MT"><BR></font></div>
-<div><font class="ws11" color="#FFFFFF" face="Gill Sans MT">Aurelion Sol solía agraciar al vasto vacío del cosmos con las maravillas celestiales que él mismo ideaba. Ahora, se ve forzado a hacer uso de su increíble poder para satisfacer los deseos de un imperio espacial que lo ha engañado.</font></div>
+<div><font class="ws11" color="#FFFFFF" face="Gill Sans MT">Aurelion Sol sol&iacute;a agraciar al vasto vac&iacute;o del cosmos con las maravillas celestiales que &eacute;l mismo ideaba. Ahora, se ve forzado a hacer uso de su incre&iacute;ble poder para satisfacer los deseos de un imperio espacial que lo ha engaÃ±ado.</font></div>
 </div></div>
 
 <div id="text4" style="position:absolute; overflow:hidden; left:82px; top:1478px; width:299px; height:186px; z-index:30"><div class="wpmd">
 <div><font class="ws18" color="#FFFFFF" face="Gill Sans MT"><B>ALISTAR</B></font></div>
 <div><font class="ws12" color="#FFFFFF" face="Gill Sans MT"><B><I>El Minotauro</I></B></font></div>
 <div><font class="ws12" color="#FFFFFF" face="Gill Sans MT"><BR></font></div>
-<div><font class="ws11" color="#FFFFFF" face="Gill Sans MT">Alistar, un poderoso guerrero con una reputación temible, busca venganza por la muerte de su clan a manos del imperio noxiano.</font></div>
+<div><font class="ws11" color="#FFFFFF" face="Gill Sans MT">Alistar, un poderoso guerrero con una reputaci&oacute;n temible, busca venganza por la muerte de su clan a manos del imperio noxiano.</font></div>
 </div></div>
 
 <div id="text5" style="position:absolute; overflow:hidden; left:80px; top:1899px; width:299px; height:186px; z-index:31"><div class="wpmd">
 <div><font class="ws18" color="#FFFFFF" face="Gill Sans MT"><B>ANNIE</B></font></div>
 <div><font class="ws12" color="#FFFFFF" face="Gill Sans MT"><B><I>La Hija de la Oscuridad</I></B></font></div>
 <div><font class="ws12" color="#FFFFFF" face="Gill Sans MT"><BR></font></div>
-<div><font class="ws11" color="#FFFFFF" face="Gill Sans MT">Peligrosa pero encantadoramente precoz, Annie es una pequeña maga con un inmenso poder piromántico. Incluso en los parajes montañosos al norte de Noxus es una hechicera sin precedentes.</font></div>
+<div><font class="ws11" color="#FFFFFF" face="Gill Sans MT">Peligrosa pero encantadoramente precoz, Annie es una pequeÃ±a maga con un inmenso poder pirom&aacute;ntico. Incluso en los parajes montaÃ±osos al norte de Noxus es una hechicera sin precedentes.</font></div>
 </div></div>
 
 <div id="text6" style="position:absolute; overflow:hidden; left:88px; top:2323px; width:299px; height:186px; z-index:32"><div class="wpmd">
 <div><font class="ws18" color="#FFFFFF" face="Gill Sans MT"><B>AKALI</B></font></div>
 <div><font class="ws12" color="#FFFFFF" face="Gill Sans MT"><B><I>la Asesina Furtiva</I></B></font></div>
 <div><font class="ws12" color="#FFFFFF" face="Gill Sans MT"><BR></font></div>
-<div><font class="ws11" color="#FFFFFF" face="Gill Sans MT">Tras renunciar a la Orden Kinkou y a su título como el Puño de la Sombra, Akali pelea a solas, lista para ser el arma letal que su pueblo necesita. Aunque conserva todo lo que aprendió de su maestro Shen, juró defender a Jonia de sus enemigos.</font></div>
+<div><font class="ws11" color="#FFFFFF" face="Gill Sans MT">Tras renunciar a la Orden Kinkou y a su t&iacute;tulo como el PuÃ±o de la Sombra, Akali pelea a solas, lista para ser el arma letal que su pueblo necesita. Aunque conserva todo lo que aprendi&oacute; de su maestro Shen, jur&oacute; defender a Jonia de sus enemigos.</font></div>
 </div></div>
 
 <div id="text7" style="position:absolute; overflow:hidden; left:82px; top:2744px; width:299px; height:186px; z-index:33"><div class="wpmd">
 <div><font class="ws18" color="#FFFFFF" face="Gill Sans MT"><B>ASHE</B></font></div>
 <div><font class="ws12" color="#FFFFFF" face="Gill Sans MT"><B><I>La Arquera de Hielo</I></B></font></div>
 <div><font class="ws12" color="#FFFFFF" face="Gill Sans MT"><BR></font></div>
-<div><font class="ws11" color="#FFFFFF" face="Gill Sans MT">Ashe, comandante hija del hielo de la tribu de Avarosa, lidera las hordas más numerosas del norte. Impasible, inteligente e idealista, aunque incómoda en su papel de líder.</font></div>
+<div><font class="ws11" color="#FFFFFF" face="Gill Sans MT">Ashe, comandante hija del hielo de la tribu de Avarosa, lidera las hordas m&aacute;s numerosas del norte. Impasible, inteligente e idealista, aunque inc&oacute;moda en su papel de l&iacute;der.</font></div>
 </div></div>
 
 <div id="text8" style="position:absolute; overflow:hidden; left:83px; top:3167px; width:299px; height:186px; z-index:34"><div class="wpmd">
 <div><font class="ws18" color="#FFFFFF" face="Gill Sans MT"><B>BLITZCRANK</B></font></div>
-<div><font class="ws12" color="#FFFFFF" face="Gill Sans MT"><B><I>El Gran Gólem de Vapor</I></B></font></div>
+<div><font class="ws12" color="#FFFFFF" face="Gill Sans MT"><B><I>El Gran GÃ³lem de Vapor</I></B></font></div>
 <div><font class="ws12" color="#FFFFFF" face="Gill Sans MT"><BR></font></div>
-<div><font class="ws11" color="#FFFFFF" face="Gill Sans MT">Blitzcrank es un autómata enorme, casi indestructible, creado originalmente para el tratamiento de residuos tóxicos. Sin embargo, este propósito original le parecía demasiado restrictivo, así que se automodificó para servir mejor a los débiles</font></div>
+<div><font class="ws11" color="#FFFFFF" face="Gill Sans MT">Blitzcrank es un aut&oacute;mata enorme, casi indestructible, creado originalmente para el tratamiento de residuos t&oacute;xicos. Sin embargo, este propÃ³sito original le parecÃ­a demasiado restrictivo, as&iacute; que se automodific&oacute; para servir mejor a los d&eacute;biles.</font></div>
 </div></div>
 
 <div id="text9" style="position:absolute; overflow:hidden; left:82px; top:3573px; width:299px; height:215px; z-index:35"><div class="wpmd">
 <div><font class="ws18" color="#FFFFFF" face="Gill Sans MT"><B>BRAUM</B></font></div>
-<div><font class="ws12" color="#FFFFFF" face="Gill Sans MT"><B><I>El Corazón de Freljord</I></B></font></div>
+<div><font class="ws12" color="#FFFFFF" face="Gill Sans MT"><B><I>El CorazÃ³n de Freljord</I></B></font></div>
 <div><font color="#FFFFFF" face="Gill Sans MT"><BR></font></div>
-<div><font class="ws12" color="#FFFFFF" face="Gill Sans MT">Bendecido con bíceps enormes y un corazón aún más grande, Braum es un héroe muy apreciado en Freljord. Todas las tabernas al norte del Fuerte Helado brindan por su fuerza legendaria. Se dice que taló un bosque de robles en una sola noche</font><font class="ws11" color="#FFFFFF" face="Gill Sans MT"> </font></div>
+<div><font class="ws12" color="#FFFFFF" face="Gill Sans MT">Bendecido con b&iacute;ceps enormes y un corazÃ³n a&uacute;n m&aacute;s grande, Braum es un h&eacute;roe muy apreciado en Freljord. Todas las tabernas al norte del Fuerte Helado brindan por su fuerza legendaria. Se dice que tal&oacute; un bosque de robles en una sola noche.</font><font class="ws11" color="#FFFFFF" face="Gill Sans MT"> </font></div>
 </div></div>
 
 </body>
