--- a/splasharts.html
+++ b/splasharts.html
@@ -123,7 +123,7 @@ a.Otros:hover{color:#3366FF;}
 <div><font class="ws18" color="#FFFFFF" face="Gill Sans MT"><B>AHRI</B></font></div>
 <div><font class="ws12" color="#FFFFFF" face="Gill Sans MT"><B><I>La Mujer Zorro de nueve Colas</I></B></font></div>
 <div><font class="ws12" color="#FFFFFF" face="Gill Sans MT"><BR></font></div>
-<div><font class="ws11" color="#FFFFFF" face="Gill Sans MT">Ahri es una vastaya conectada de forma innata al poder latente de Runaterra, y es capaz de convertir la magia en orbes de energ&iacute;a pura. Le gusta jugar con su presa, manipulando sus emociones antes de devorar su esencia de vida. sus emociones antes de devorar su esencia de vida.</font></div>
+<div><font class="ws11" color="#FFFFFF" face="Gill Sans MT">Ahri es una vastaya conectada de forma innata al poder latente de Runaterra, y es capaz de convertir la magia en orbes de energ&iacute;a pura. Le gusta jugar con su presa, manipulando sus emociones antes de devorar su esencia de vida.</font></div>
 </div></div>
 
 <div id="text2" style="position:absolute; overflow:hidden; left:83px; top:637px; width:299px; height:186px; z-index:28"><div class="wpmd">
