--- a/productos.html
+++ b/productos.html
@@ -105,7 +105,7 @@ body {text-align:center;margin:0}
 
 <div id="text1" style="position:absolute; overflow:hidden; left:237px; top:566px; width:211px; height:62px; z-index:17"><div class="wpmd">
 <div align=center><font class="ws16" color="#2493BD" face="Gill Sans MT">Figura Jhin: Evento </font></div>
-<div align=center><font class="ws16" color="#2493BD" face="Gill Sans MT">Bajo el telón</font></div>
+<div align=center><font class="ws16" color="#2493BD" face="Gill Sans MT">Bajo el tel&oacute;n</font></div>
 </div></div>
 
 <div id="text2" style="position:absolute; overflow:hidden; left:586px; top:567px; width:211px; height:62px; z-index:18"><div class="wpmd">
@@ -119,7 +119,7 @@ body {text-align:center;margin:0}
 </div></div>
 
 <div id="text4" style="position:absolute; overflow:hidden; left:582px; top:846px; width:211px; height:62px; z-index:20"><div class="wpmd">
-<div align=center><font class="ws16" color="#2493BD" face="Gill Sans MT">Vinilos del 10°</font></div>
+<div align=center><font class="ws16" color="#2493BD" face="Gill Sans MT">Vinilos del 10Â°;</font></div>
 <div align=center><font class="ws16" color="#2493BD" face="Gill Sans MT">aniversario</font></div>
 </div></div>
 
@@ -129,7 +129,7 @@ body {text-align:center;margin:0}
 </div></div>
 
 <div id="text6" style="position:absolute; overflow:hidden; left:938px; top:847px; width:211px; height:62px; z-index:22"><div class="wpmd">
-<div align=center><font class="ws16" color="#2493BD" face="Gill Sans MT">Mantas prémium de </font></div>
+<div align=center><font class="ws16" color="#2493BD" face="Gill Sans MT">Mantas pr&eacute;mium de </font></div>
 <div align=center><font class="ws16" color="#2493BD" face="Gill Sans MT">Solo ante el peligro</font></div>
 </div></div>
 
