--- a/contacto.html
+++ b/contacto.html
@@ -65,35 +65,33 @@ body {text-align:center;margin:0}
 
 <div id="g_image7" style="position:absolute; overflow:hidden; left:152px; top:0px; width:501px; height:499px; z-index:1"><img src="images/paste6.jpg" alt="" border=0 width=501 height=499></div>
 
-<div id="shape1" style="position:absolute; overflow:hidden; left:152px; top:381px; width:1090px; height:558px; z-index:2"><img border=0 alt="shape" src="images/shape4465250.gif"></div>
+<div id="g_image6" style="position:absolute; overflow:hidden; left:442px; top:260px; width:180px; height:60px; z-index:2"><a href="roles.html" target="_self"><img src="images/Azul1c.png" alt="" border=0 width=180 height=60></a></div>
 
-<div id="g_image6" style="position:absolute; overflow:hidden; left:442px; top:260px; width:180px; height:60px; z-index:3"><a href="roles.html" target="_self"><img src="images/Azul1c.png" alt="" border=0 width=180 height=60></a></div>
+<div id="g_image5" style="position:absolute; overflow:hidden; left:640px; top:261px; width:180px; height:60px; z-index:3"><a href="campeones.html" target="_self"><img src="images/Azul1c.png" alt="" border=0 width=180 height=60></a></div>
 
-<div id="g_image5" style="position:absolute; overflow:hidden; left:640px; top:261px; width:180px; height:60px; z-index:4"><a href="campeones.html" target="_self"><img src="images/Azul1c.png" alt="" border=0 width=180 height=60></a></div>
+<div id="g_image4" style="position:absolute; overflow:hidden; left:839px; top:261px; width:180px; height:60px; z-index:4"><a href="productos.html" target="_self"><img src="images/Azul1c.png" alt="" border=0 width=180 height=60></a></div>
 
-<div id="g_image4" style="position:absolute; overflow:hidden; left:839px; top:261px; width:180px; height:60px; z-index:5"><a href="productos.html" target="_self"><img src="images/Azul1c.png" alt="" border=0 width=180 height=60></a></div>
-
-<div id="g_text4" style="position:absolute; overflow:hidden; left:494px; top:274px; width:82px; height:25px; z-index:6"><div class="wpmd">
+<div id="g_text4" style="position:absolute; overflow:hidden; left:494px; top:274px; width:82px; height:25px; z-index:5"><div class="wpmd">
 <div><font class="ws16" face="Gill Sans MT"><B><a href="roles.html" title="" target="_self" class="Standard">ROLES</a></B></font></div>
 </div></div>
 
-<div id="g_text3" style="position:absolute; overflow:hidden; left:663px; top:275px; width:143px; height:25px; z-index:7"><div class="wpmd">
+<div id="g_text3" style="position:absolute; overflow:hidden; left:663px; top:275px; width:143px; height:25px; z-index:6"><div class="wpmd">
 <div><font class="ws16" face="Gill Sans MT"><B><a href="campeones.html" title="" target="_self" class="Standard">CAMPEONES</a></B></font></div>
 </div></div>
 
-<div id="g_text2" style="position:absolute; overflow:hidden; left:860px; top:274px; width:147px; height:26px; z-index:8"><div class="wpmd">
+<div id="g_text2" style="position:absolute; overflow:hidden; left:860px; top:274px; width:147px; height:26px; z-index:7"><div class="wpmd">
 <div><font class="ws16" face="Gill Sans MT"><B><a href="productos.html" title="" target="_self" class="Standard">PRODUCTOS</a></B></font></div>
 </div></div>
 
-<div id="g_image3" style="position:absolute; overflow:hidden; left:1037px; top:261px; width:180px; height:60px; z-index:9"><a href="contacto.html" target="_self"><img src="images/Azul1c.png" alt="" border=0 width=180 height=60></a></div>
+<div id="g_image3" style="position:absolute; overflow:hidden; left:1037px; top:261px; width:180px; height:60px; z-index:8"><a href="contacto.html" target="_self"><img src="images/Azul1c.png" alt="" border=0 width=180 height=60></a></div>
 
-<div id="g_text1" style="position:absolute; overflow:hidden; left:1061px; top:275px; width:137px; height:25px; z-index:10"><div class="wpmd">
+<div id="g_text1" style="position:absolute; overflow:hidden; left:1061px; top:275px; width:137px; height:25px; z-index:9"><div class="wpmd">
 <div><font class="ws16" face="Gill Sans MT"><B><a href="contacto.html" title="" target="_self" class="Standard">CONTACTO</a></B></font></div>
 </div></div>
 
-<div id="g_image2" style="position:absolute; overflow:hidden; left:874px; top:10px; width:343px; height:251px; z-index:11; background-color:#FFFFFF"><a href="index.html" title="Home" target="_self"><img src="images/img66343046.png" alt="" border=0 width=343 height=251></a></div>
+<div id="g_image2" style="position:absolute; overflow:hidden; left:874px; top:10px; width:343px; height:251px; z-index:10; background-color:#FFFFFF"><a href="index.html" title="Home" target="_self"><img src="images/img66343046.png" alt="" border=0 width=343 height=251></a></div>
 
-<div id="html1" style="position:absolute; overflow:hidden; left:852px; top:422px; width:350px; height:421px; z-index:12">
+<div id="html1" style="position:absolute; overflow:hidden; left:852px; top:422px; width:350px; height:421px; z-index:11">
 <!-- Do not change the code! -->
 <a id="foxyform_embed_link_344275" href="http://es.foxyform.com/">foxyform</a>
 <script type="text/javascript">
@@ -106,10 +104,10 @@ body {text-align:center;margin:0}
 </script>
 <!-- Do not change the code! --></div>
 
-<div id="text1" style="position:absolute; overflow:hidden; left:203px; top:461px; width:625px; height:327px; z-index:13"><div class="wpmd">
-<div><font class="ws28" color="#32C8FF" face="Gill Sans MT"><B>¿Te gustaria formar parte de Wild rift?</B></font></div>
-<div align=right><font face="Gill Sans MT"><BR></font></div>
-<div align=justify><font class="ws14" color="#FFFFFF" face="Gill Sans MT">Somos el servicio de asistencia de Riot Games para Wild Rift, aquí puedes contactar con nosotros para reportar bugs visuales y mecánicos, y también si estás interesado en formar parte de nuestro equipo puedes contactar enviando un formulario, estamos encantados de recibir nuevos integrantes con talento.</font></div>
+<div id="text1" style="position:absolute; overflow:hidden; left:203px; top:461px; width:625px; height:327px; z-index:12"><div class="wpmd">
+<div><font class="ws28" color="#2493BD" face="Gill Sans MT"><B>¿Te gustaria formar parte de Wild rift?</B></font></div>
+<div align=right><font color="#000000" face="Gill Sans MT"><BR></font></div>
+<div align=justify><font class="ws14" color="#000000" face="Gill Sans MT">Somos el servicio de asistencia de Riot Games para Wild Rift, aquí puedes contactar con nosotros para reportar bugs visuales y mecánicos, y también si estás interesado en formar parte de nuestro equipo puedes contactar enviando un formulario, estamos encantados de recibir nuevos integrantes con talento.</font></div>
 </div></div>
 
 
