--- a/contacto.html
+++ b/contacto.html
@@ -102,7 +102,7 @@ body {text-align:center;margin:0}
    s.parentNode.insertBefore(g, s);
 }(document, "script"));
 </script>
-<!-- Do not change the code! --></div>
+<!-- Do not change the code! -->
 
 <div id="text1" style="position:absolute; overflow:hidden; left:203px; top:461px; width:625px; height:327px; z-index:12"><div class="wpmd">
 <div><font class="ws28" color="#2493BD" face="Gill Sans MT"><B>¿Te gustaria formar parte de Wild rift?</B></font></div>
