--- a/contacto.html
+++ b/contacto.html
@@ -105,9 +105,9 @@ body {text-align:center;margin:0}
 <!-- Do not change the code! --></div>
 
 <div id="text1" style="position:absolute; overflow:hidden; left:203px; top:461px; width:625px; height:327px; z-index:12"><div class="wpmd">
-<div><font class="ws28" color="#2493BD" face="Gill Sans MT"><B>¿Te gustaria formar parte de Wild rift?</B></font></div>
+<div><font class="ws28" color="#2493BD" face="Gill Sans MT"><B>Te gustaria formar parte de Wild rift?</B></font></div>
 <div align=right><font color="#000000" face="Gill Sans MT"><BR></font></div>
-<div align=justify><font class="ws14" color="#000000" face="Gill Sans MT">Somos el servicio de asistencia de Riot Games para Wild Rift, aquí puedes contactar con nosotros para reportar bugs visuales y mecánicos, y también si estás interesado en formar parte de nuestro equipo puedes contactar enviando un formulario, estamos encantados de recibir nuevos integrantes con talento.</font></div>
+<div align=justify><font class="ws14" color="#000000" face="Gill Sans MT">Somos el servicio de asistencia de Riot Games para Wild Rift, aqu&iacute puedes contactar con nosotros para reportar bugs visuales y mec&aacutenicos, y tambi&eacuten si est&aacutes interesado en formar parte de nuestro equipo puedes contactar enviando un formulario, estamos encantados de recibir nuevos integrantes con talento.</font></div>
 </div></div>
 
 
