--- a/contacto.html
+++ b/contacto.html
@@ -91,24 +91,27 @@ body {text-align:center;margin:0}
 
 <div id="g_image2" style="position:absolute; overflow:hidden; left:874px; top:10px; width:343px; height:251px; z-index:10; background-color:#FFFFFF"><a href="index.html" title="Home" target="_self"><img src="images/img66343046.png" alt="" border=0 width=343 height=251></a></div>
 
-<div id="html1" style="position:absolute; overflow:hidden; left:852px; top:422px; width:350px; height:421px; z-index:11">
-<!-- Do not change the code! -->
-<a id="foxyform_embed_link_344275" href="http://es.foxyform.com/">foxyform</a>
-<script type="text/javascript">
-(function(d, t){
-   var g = d.createElement(t),
-       s = d.getElementsByTagName(t)[0];
-   g.src = "http://es.foxyform.com/js.php?id=344275&sec_hash=5f9a9949854&width=350px";
-   s.parentNode.insertBefore(g, s);
-}(document, "script"));
-</script>
-<!-- Do not change the code! --></div>
-
 <div id="text1" style="position:absolute; overflow:hidden; left:203px; top:461px; width:625px; height:327px; z-index:12"><div class="wpmd">
 <div><font class="ws28" color="#2493BD" face="Gill Sans MT"><B>Te gustaria formar parte de Wild rift?</B></font></div>
 <div align=right><font color="#000000" face="Gill Sans MT"><BR></font></div>
 <div align=justify><font class="ws14" color="#000000" face="Gill Sans MT">Somos el servicio de asistencia de Riot Games para Wild Rift, aqu&iacute puedes contactar con nosotros para reportar bugs visuales y mec&aacutenicos, y tambi&eacuten si est&aacutes interesado en formar parte de nuestro equipo puedes contactar enviando un formulario, estamos encantados de recibir nuevos integrantes con talento.</font></div>
 </div></div>
+	
+<div id="text2" style="position:absolute; overflow:hidden; left:896px; top:459px; width:89px; height:202px; z-index:16"><div class="wpmd">
+<div><font class="ws14" color="#2493BD" face="Gill Sans MT"><B>Nombre</B></font></div>
+<div><font class="ws14" color="#2493BD" face="Gill Sans MT"><B><BR></B></font></div>
+<div><font class="ws14" color="#2493BD" face="Gill Sans MT"><B>E-mail</B></font></div>
+<div><font class="ws14" color="#2493BD" face="Gill Sans MT"><B><BR></B></font></div>
+<div><font class="ws14" color="#2493BD" face="Gill Sans MT"><B>Mensaje</B></font></div>
+</div></div>
+
+<form name="form1" method="POST" action="mailto: Lianguber@gmail.com">
+<input name="name" type="text" style="position:absolute;width:301px;left:898px;top:485px;z-index:12">
+<input name="subject" type="text" style="position:absolute;width:301px;left:898px;top:525px;z-index:13">
+<textarea name="message" style="position:absolute;width:300px;height:180px;left:897px;top:569px;z-index:14"></textarea>
+<input name="Enviar" type="submit" value="Enviar" style="position:absolute;left:898px;top:763px;z-index:15">
+</form>
+
 
 
 </div></body>
